--- a/client/src/pages/NutritionListPage/styles.css
+++ b/client/src/pages/NutritionListPage/styles.css
@@ -1,3 +1,38 @@
 .disabled {
     opacity: 0.5;
 }
+
+.action-button {
+    min-width: 6em;
+    max-height: 2em;
+}
+
+.actions-bar {
+    flex-grow: 0;
+    flex-basis: 22em;
+}
+
+.slected-label {
+    flex-grow: 1;
+    flex-basis: 10em;
+}
+
+@media screen and (max-width: 40em) {
+    thead.table-header {
+        display: none;
+    }
+    
+    .table-cell--hidden-sm {
+        display: none;
+    }
+
+    div.table-cell__inner-content--hidden-md {
+        display: inline-block;
+    }
+}
+
+.table-cell__inner-content--hidden-md {
+    display: none;
+    line-height: 1em;
+    margin-left: 1em;
+}
